# saw_count_p

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
Bam2Gem/: CMakeLists.txt  annotationException.h  bam2gem.cpp  bam2gem.h  bamUtils.cpp  bamUtils.h  geneBuilder.cpp  geneBuilder.h  geneFromGTF.cpp  geneFromGTF.h  gtfReader.cpp  gtfReader.h  gtfRecord.h  h5Writer.cpp  h5Writer.h  main.cpp  multiMap.cpp  multiMap.h  samReader.cpp  samReader.h  samWriter.h  tagReadsWithGeneExon.cpp  tagReadsWithGeneExon.h  umiCorrection.h  utils.cpp  utils.h
checkGTF/: CMakeLists.txt  annoCorrector.cpp  annoCorrector.h  main.cpp
doc/: Bam2Gem_workflow.md  checkGTF.md
script/: build.sh
unittest/: CMakeLists.txt  annotationTest.cpp  umiCorrectionTest.cpp  utilsTest.cpp
